--- a/kadaiBstart2.html
+++ b/kadaiBstart2.html
@@ -23,18 +23,20 @@
       border-radius: 50%;
       transform: rotate(360deg);
     }
-    chukichi {
-      background: pink;
+    .chukichi {
+      background: green;
       border-radius: 50%;
       transform: rotate(360deg);
     }
-    shokichi {
-      background: pink;
+    .shokichi {
+      background: yellow;
       border-radius: 50%;
       transform: rotate(360deg);
+      transform: scale(0.9);
     }
     .lose {
-      transform: scale(0.9);
+      background: blue;
+      transform: scale(0.8);
     }
   </style>
 </head>
