--- a/kadaiBstart2.html
+++ b/kadaiBstart2.html
@@ -31,10 +31,10 @@
     .shokichi {
       background: yellow;
       border-radius: 50%;
-      transform: rotate(360deg);
       transform: scale(0.9);
+      transform: rotate(360deg);
     }
-    .lose {
+    .kyo {
       background: blue;
       transform: scale(0.8);
     }
