--- a/kadaiBstart2.html
+++ b/kadaiBstart2.html
@@ -7,7 +7,6 @@
     body {
       display: flex;
       flex-wrap: wrap;
-      alert("好きなところを押してね")
     }
     .box {
       width: 100px;
@@ -46,6 +45,7 @@
 
   <script>
     'use strict';
+    alert("好きなところを押してね");
 
     const num = 10;
     const shokichi1 = Math.floor(Math.random() * num); // 0 - 4
